Delete secret when deleting dinosaur; Put secret in the vault; Obtainig secrets from vault
