# internal/dinosaur/pkg/api/private/model_managed_dinosaur_all_of_spec_oauth.go
@@ -1,0 +1,16 @@
+/*
+ * Dinosaur Service Fleet Manager
+ *
+ * Dinosaur Service Fleet Manager APIs that are used by internal services e.g fleetshard operators.
+ *
+ * API version: 1.4.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package private
+
+// ManagedDinosaurAllOfSpecOauth struct for ManagedDinosaurAllOfSpecOauth
+type ManagedDinosaurAllOfSpecOauth struct {
+	ClientId     string `json:"clientId,omitempty"`
+	ClientSecret string `json:"clientSecret,omitempty"`
+}
